# fgmetric

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  python_package.yml
docs/: benchmarks.md
fgmetric/: __init__.py  _delimiter.py  _duckdb.py  _paths.py  _typing_extensions.py  metric.py  metric_reader.py  metric_writer.py  model_reader.py  model_writer.py  record_model.py
fgmetric/collections/: _counter_pivot_table.py
fgmetric/converters/: __init__.py  _bool_tokens.py  _counter_pivot_table.py  _delimited.py  _delimited_collection.py  _delimited_mapping.py  _null_sentinels.py
fgmetric/mixins/: __init__.py  _null_sentinels.py
tests/: conftest.py  test_bool_tokens.py  test_collections.py  test_compression.py  test_counter_pivot_table.py  test_delimited_collection.py  test_delimited_mapping.py  test_delimiter.py  test_from_sql.py  test_metric.py  test_metric_reader.py  test_metric_writer.py  test_model_reader.py  test_model_writer.py  test_null_sentinels.py  test_paths.py  test_record_model.py  test_roundtrip.py  test_typing_extensions.py
tests/benchmarks/: test_benchmark_runtime.py
