[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "fgmetric"
version         = "0.4.0"
description     = "Pydantic-backed Metric."
readme          = "README.md"
authors         = [{ name="Fulcrum Genomics LLC", email="contact@fulcrumgenomics.com" }]
license         = "MIT"
include         = ["LICENSE"]
requires-python = ">=3.12"
dependencies    = [
    "pydantic>=2.11.4",
    "xopen>=2.0.0",
]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
"homepage" = "https://github.com/fg-labs/fgmetric"
"repository" = "https://github.com/fg-labs/fgmetric"
"Bug Tracker" = "https://github.com/fg-labs/fgmetric/issues"

[dependency-groups]
dev = [
    "ruff==0.15.20",
    "mypy==2.1.0",
    "pyrefly==1.1.1",
    "pytest>=8.3,<10.0",
    "pytest-cov>=6.1,<8.0",
    "pytest-mock ~=3.14",
    "poethepoet ~=0.34",
    "pre-commit ~=4.0",
]
ipython = [
    "ipython ~=9.2",
]
benchmark = [
    "pytest-benchmark ~=5.1.0",
    "fgpyo ~=1.2.0",
]

[tool.poe.tasks]
fix-format = "ruff format"
fix-lint   = "ruff check --fix"

fix-all.ignore_fail = "return_non_zero"
fix-all.sequence    = [
    "fix-format",
    "fix-lint"
]

check-format  = "ruff format --check --diff"
check-lint    = "ruff check"
check-tests   = "pytest --ignore=tests/benchmarks"
check-mypy    = "mypy"
check-pyrefly = "pyrefly check"

check-typing.ignore_fail = "return_non_zero"
check-typing.sequence    = [
    "check-mypy",
    "check-pyrefly",
]

check-all.ignore_fail = "return_non_zero"
check-all.sequence    = [
    "check-format",
    "check-lint",
    "check-typing",
    "check-tests"
]

fix-and-check-all.sequence    = [
    "fix-format",
    "fix-lint",
    "check-typing",
    "check-tests"
]

benchmark = "pytest --no-cov --benchmark-group-by param:num_rows --override-ini testpaths=tests/benchmarks"

[tool.mypy]
files                       = ["./"]
strict_optional             = true
strict_equality             = true
check_untyped_defs          = true
disallow_incomplete_defs    = true
disallow_untyped_calls      = true
disallow_untyped_decorators = true
disallow_untyped_defs       = true
no_implicit_optional        = true
warn_no_return              = true
warn_redundant_casts        = true
warn_return_any             = true
warn_unreachable            = true
warn_unused_configs         = true
warn_unused_ignores         = true
enable_error_code           = [
    "ignore-without-code",
    "possibly-undefined",
    "exhaustive-match",
]
exclude                     = [
    "docs/",
    "site/",
]

[[tool.mypy.overrides]]
module = [
    "pytest_benchmark.*",
    "fgpyo.*",
]
ignore_missing_imports = true

[tool.pyrefly]
project-includes         = ["fgmetric", "tests"]
python-version           = "3.12"
# Benchmark-group deps (not installed in CI); mirrors the mypy `ignore_missing_imports` overrides above.
replace-imports-with-any = ["fgpyo.*", "pytest_benchmark.*"]

[tool.pytest.ini_options]
testpaths = ["tests/"]
minversion = "7.4"
addopts    = [
    "--color=yes",
    "--import-mode=importlib",
    "--cov",
]

[tool.coverage.run]
omit = ["tests/benchmarks/*"]

[tool.ruff]
line-length    = 100
target-version = "py312"
output-format  = "full"
preview        = true

[tool.ruff.lint]
select    = [
    "A",      # Builtin shadowing
    "ARG",    # Unused arguments
    "C901",   # McCabe complexity
    "B",      # bugbear
    "D",      # pydocstyle (docstrings. We have the "google" convention enabled)
    "D204",   # Blank line between class docstring and first (__init__) method
    "D213",   # Summary line should be located on the line after opening quotes
    "E",      # pycodestyle errors
    "LOG",    # flake8-logging
    "LOG015", # (preview rule) Prohibit calls to the root logger
    "F",      # pyflakes
    "I",      # isort
    "N",      # PEP8 naming
    "W",      # pycodestyle warnings
    "Q",      # flake8-quotes
    "RUF008", # Do not use mutable default values for dataclass attributes 
    "RUF012", # Mutable class attributes should be annotated with typing.ClassVar
    "RUF024", # Do not pass mutable objects as values to dict.fromKeys
]
ignore    = [
    "E203",
    "E701",
    "D212",  # summary line should be located on the same line as opening quotes
    "D100",  # missing docstring in public module
    "D104",  # missing docstring in public package
    "D105",  # missing docstring in magic method
]
unfixable = ["B"]
# NB: only preview rules explicitly selected above (e.g. LOG015) will be enforced
preview = true
explicit-preview-rules = true

[tool.ruff.lint.per-file-ignores]
# Ignore `D103` Missing docstring in public function in test files
"tests/**.py" = ["D103"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

